--- a/TwitterCloneWithFirebase/app/src/main/res/layout/activity_main.xml
+++ b/TwitterCloneWithFirebase/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cs456.chris.twitterclonewithfirebase.MainActivity">
 
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+        <EditText
+            android:id="@+id/edit_user"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:inputType="textShortMessage"/>
+        <Button
+            android:id="@+id/filter_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change Sender"/>
+
+    </LinearLayout>
+
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/footer"
+        android:layout_below="@+id/header"
         />
 
 
